syntax = "proto3";

option csharp_namespace = "GrpcServer";

package items;

service ItemService {
    rpc GetItem(GetItemRequest) returns (ItemResponse);
    rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
    rpc CreateItem(CreateItemRequest) returns (ItemResponse);
    rpc UpdateItem(UpdateItemRequest) returns (ItemResponse);
    rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
}

message GetItemRequest {
    string id = 1;  
}

message ListItemsRequest {}

message Item {
    string id = 1;  
    string name = 2;
    string description = 3;
}

message ItemResponse {
    Item item = 1;
}

message ListItemsResponse {
    repeated Item items = 1;
}

message CreateItemRequest {
    string name = 1;
    string description = 2;
}

message UpdateItemRequest {
    string id = 1;  
    string name = 2;
    string description = 3;
}

message DeleteItemRequest {
    string id = 1;  
}

message DeleteItemResponse {
    bool success = 1;
}